Reestructuración de los partados del trabajo

--- a/MDS_TFM_CreditRisk.html
+++ b/MDS_TFM_CreditRisk.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Miguel García Sánchez" />
 
-<meta name="date" content="2023-03-09" />
+<meta name="date" content="2023-03-10" />
 
 <title>URJC MDS TFM - Financial Credit Risk</title>
 
@@ -1575,11 +1575,14 @@ border-radius: 0px;
 
 <h1 class="title toc-ignore">URJC MDS TFM - Financial Credit Risk</h1>
 <h4 class="author">Miguel García Sánchez</h4>
-<h4 class="date">2023-03-09</h4>
+<h4 class="date">2023-03-10</h4>
 
 </div>
 
 
+<div id="inicio-del-desarrollo-del-trabajo" class="section level1">
+<h1><em>INICIO DEL DESARROLLO DEL TRABAJO</em></h1>
+</div>
 <div id="introducción" class="section level1">
 <h1>1. Introducción</h1>
 <p>El trabajo a desarrollar consiste en el análisis de un dataset
@@ -1771,6 +1774,9 @@ cartera una institución financiera y saber si estamos ante créditos que
 van a poder ser devueltos por el cliente, o por si el contrario se van a
 quedar como impagados.</p>
 </div>
+</div>
+<div id="análisis-inicial-limpieza-y-particionado-de-los-datos" class="section level1">
+<h1><em>ANÁLISIS INICIAL, LIMPIEZA Y PARTICIONADO DE LOS DATOS</em></h1>
 </div>
 <div id="limpieza-inicial-del-conjunto-de-datos" class="section level1">
 <h1>3. Limpieza inicial del conjunto de datos</h1>
@@ -2097,6 +2103,9 @@ fcr_train</code></pre>
 ## #   abbreviated variable names ¹​person_income, ²​person_home_ownership,
 ## #   ³​person_emp_length, ⁴​loan_intent, ⁵​loan_grade, ⁶​loan_amnt, ⁷​loan_int_rate,
 ## #   ⁸​loan_status</code></pre>
+</div>
+<div id="análisis-en-profundidad-de-los-datos" class="section level1">
+<h1><em>ANÁLISIS EN PROFUNDIDAD DE LOS DATOS</em></h1>
 </div>
 <div id="eda---análisis-exploratorio-de-datos" class="section level1">
 <h1>6. EDA - Análisis exploratorio de datos</h1>
@@ -2637,6 +2646,13 @@ importe del préstamo. Este gráfico es interesante porque muestra
 claramente que unos tipos de interés más altos, unos ingresos más bajos
 y un crédito más elevado aumentan la posibilidad de impago.</p>
 </div>
+</div>
+<div id="aplicación-de-las-técnicas-y-modelos-de-machine-learning" class="section level1">
+<h1><em>APLICACIÓN DE LAS TÉCNICAS Y MODELOS DE MACHINE
+LEARNING</em></h1>
+</div>
+<div id="técnicas-de-reducción-de-la-dimensionalidad" class="section level1">
+<h1>7. Técnicas de reducción de la dimensionalidad</h1>
 </div>
 
 
