Correción de texto

--- a/MDS_TFM_CreditRisk.html
+++ b/MDS_TFM_CreditRisk.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Miguel García Sánchez" />
 
-<meta name="date" content="2023-04-18" />
+<meta name="date" content="2023-05-05" />
 
 <title>URJC MDS TFM - Financial Credit Risk</title>
 
@@ -1575,7 +1575,7 @@ border-radius: 0px;
 
 <h1 class="title toc-ignore">URJC MDS TFM - Financial Credit Risk</h1>
 <h4 class="author">Miguel García Sánchez</h4>
-<h4 class="date">2023-04-18</h4>
+<h4 class="date">2023-05-05</h4>
 
 </div>
 
@@ -6383,8 +6383,8 @@ XGBoost.</p>
 <div id="validación-de-los-resultados" class="section level1">
 <h1><em>VALIDACIÓN DE LOS RESULTADOS</em></h1>
 </div>
-<div id="comprobación-delos-resultados-con-los-datos-de-test" class="section level1">
-<h1>13. Comprobación delos resultados con los datos de test</h1>
+<div id="comprobación-de-los-resultados-con-los-datos-de-test" class="section level1">
+<h1>13. Comprobación de los resultados con los datos de test</h1>
 <div id="cambios-modificaciones-y-transformaciones-sobre-el-dataset-de-test" class="section level2">
 <h2>13.1. Cambios, modificaciones y transformaciones sobre el dataset de
 test</h2>
@@ -6511,7 +6511,7 @@ siendo esto un resultado final del trabajo positivo.</p>
 <div id="conclusiones-generales-del-estudio" class="section level1">
 <h1>14. Conclusiones generales del estudio</h1>
 <ul>
-<li><p>**Métrica de evaluación y punto de corte:*</p></li>
+<li><p><strong>Métrica de evaluación y punto de corte:</strong></p></li>
 <li><p><strong>Ajuste de Hiperparámetros y Validación cruzada (Tuning y
 Cross Validation):</strong></p></li>
 <li><p><strong>Comparativa entre modelos:</strong></p></li>
